# chipmate

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: chip8.rs  main.rs  screen.rs  ui.rs
